# FastAD-Report

./: .gitignore  Makefile  README.md  abstract.tex  acknowledgements.tex  appendix.tex  background.tex  benchmarks.tex  conclusion.tex  fastad-report.tex  fastad.tex  further.tex  introduction.tex  log_sum_exp.tex  matrix_mult.tex  normal_log_pdf.tex  overview.tex  references.bib  regression.tex  related.tex  reverse.tex  sum_prod.tex  tutorial.tex
benchmark/: log_sum_exp.tex  matrix_mult.tex  normal_log_pdf.tex  regression.tex  stochastic_volatility.tex  sum_prod.tex
data/: log_sum_exp.csv  log_sum_exp_eval.csv  matrix_product.csv  matrix_product_eval.csv  normal_log_pdf.csv  prod.csv  prod_eval.csv  prod_iter.csv  prod_iter_eval.csv  regression.csv  stochastic_volatility.csv  stochastic_volatility_eval.csv  sum.csv  sum_eval.csv  sum_iter.csv  sum_iter_eval.csv
fastad/: binary.tex  compile_time_opt.tex  eq.tex  example.tex  expression_node.tex  glue.tex  memory.tex  motivation.tex  normal_log_pdf.tex  unary.tex  value_adj_view.tex  value_view.tex  var.tex  var_view.tex  vectorization.tex
related/: inline.tex  memory.tex  vectorization.tex
slides/columbia-10132020/: benchmark.tex  conclusion.tex  fastad.tex  introduction.tex  reverse.tex
slides/stanford-01272022/examples/: CMakeLists.txt  README.md  clean-build.sh  setup.sh
slides/stanford-01272022/examples/src/: CMakeLists.txt  compare_fd.cpp  counting_iterator.hpp  fd_prec.cpp  for_each.cpp  fwd_ad.cpp  if_else.cpp  kevin_senpai_mle.cpp  map.cpp  mle.cpp  optimizer.hpp  rv_ad.cpp
(+19 files in other folders)
